crates/plotnik-tests/tests/04-emit/types/recursion/error_captured_ref_via_recursive_alias.txt
A = (B)

B = {
  (debugger_statement)
  (statement_block
    (A) @x
  )? @s
}
------------------ DIAGNOSTICS -------------------
error: the referenced definition produces no value; add a capture inside it or capture a node pattern directly
 --> query.ptk:6:5
  |
1 | A = (B)
  |     --- defined here
...
6 |     (A) @x
  |     ^^^
